force-app/main/default/objects/Evento__c/Evento__c.object-meta.xml
<CustomObject>
    <description>Objeto principal para gerenciar os eventos do EventHub.</description>
    <label>Evento</label>
    <pluralLabel>Eventos</pluralLabel>
    <nameField>
        <label>Nome do Evento</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>