force-app/main/default/objects/Evento__c/fields/Data_Hora_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_Inicio__c</fullName>
    <description>Data e hora de início do evento.</description>
    <label>Data e Hora de Início</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>