force-app/main/default/objects/Evento__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <description>Local onde o evento será realizado (endereço ou link para eventos online).</description>
    <label>Local</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>