force-app/main/default/objects/Evento__c/fields/Total_Inscritos__c.field-meta.xml
<CustomField>
    <fullName>Total_Inscritos__c</fullName>
    <description>Campo de resumo que conta automaticamente o total de inscrições vinculadas a este evento.</description>
    <label>Total de Inscritos</label>
    <summaryForeignKey>Inscricao__c.Evento__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>