force-app/main/default/objects/Evento__c/fields/Vagas_Maximas__c.field-meta.xml
<CustomField>
    <fullName>Vagas_Maximas__c</fullName>
    <description>Quantidade máxima de vagas disponíveis para o evento.</description>
    <label>Vagas Máximas</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>