force-app/main/default/objects/Evento__c/validationRules/Data_Inicio_No_Passado.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Inicio_No_Passado</fullName>
    <active>true</active>
    <description>Impede a criação ou edição de eventos com data de início no passado.</description>
    <errorConditionFormula>Data_Hora_Inicio__c &lt; NOW()</errorConditionFormula>
    <errorMessage>Não é possível agendar um evento para uma data e hora que já passaram.</errorMessage>
</ValidationRule>